--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
-language: android
-jdk: oraclejdk8
-dist: trusty
 
+language: android
 android:
   components:
-    - platform-tools
-    - tools
-    - build-tools-24.0.2
-    - android-22
-    - android-24
-    - sys-img-armeabi-v7a-android-22
+    - build-tools-26.0.2
+    - $ANDROID_TARGET
+    - sys-img-armeabi-v7a-$ANDROID_TARGET
+    - extra-android-support
     - extra-android-m2repository
-  
-  before_cache:
-    - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-    - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-    
-  script: ./gradlew connectedAndroidTest 
+    - extra-google-m2repository
+env:
+  matrix:
+    - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+before_script:
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
