--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 28 15:47:57 SAST 2020
-sdk.dir=/home/bakang/Android/Sdk
+#Fri Feb 28 16:55:23 CAT 2020
+sdk.dir=C\:\\Users\\1666116\\AppData\\Local\\Android\\Sdk
