--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,51 @@
 language: android
-jdk: oraclejdk8
+sudo: required
+Jdk: oraclejdk8
+
 env:
   global:
-    - ANDROID_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS_VERSION=25.0.0
+    - ADB_INSTALL_TIMEOUT=5 # minutes
+
+#So that cache isnt always uploaded
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 android:
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
   components:
     - tools
-    - tools
+    - android-26
     - platform-tools
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - build-tools-25.0.0
-    - android-22
+    - build-tools-26.1.1
+    - extra
+    # To run emulator during your tests
+    - sys-img-x86-android-26
     - sys-img-armeabi-v7a-android-22
 
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 before_install:
-  - yes | sdkmanager "platforms;android-27"
-  - yes | sdkmanager "platforms;android-28"
+  - chmod +x gradlew
 
 before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
+  #- adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - adb shell input keyevent 82 &
+  
+
+script:
+#  - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
+  - ./gradlew assembleAndroidTest
+  - ./gradlew connectedAndroidTest
+
+#after_success:
+#- bash <(curl -s https://codecov.io/bash)
