--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,16 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+env:
+  global:
+    - ANDROID_API_LEVEL = 26
+    - EMULATOR_API_LEVEL = 21
+    - ANDROID_ABI = armeabi-v7a
+    - ANDROID_TAG = google_apis
+
 android:
   components:
+    - tools
     - tools
     - android-26
     - platform-tools
@@ -24,7 +32,8 @@ android:
     - extra
     # To run emulator during your tests
     - sys-img-x86-android-26
-    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
@@ -35,7 +44,7 @@ before_install:
   - chmod +x gradlew
 
 before_script:
-  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   #- adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
