--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,13 @@ android:
     - tools
     - tools
     - android-26
+    - android-22
     - platform-tools
     - build-tools-26.1.1
     - extra
     # To run emulator during your tests
     - sys-img-x86-android-26
+    - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 
