--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ buildscript {
     }
 }
 
+apply plugin: 'com.gradle.build-scan'
+buildScan {
+    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
+    licenseAgree = 'yes'
+}
+
 allprojects {
     repositories {
         google()
