--- a/.travis.yml
+++ b/.travis.yml
@@ -55,9 +55,9 @@ before_script:
 
 script:
   #- ./gradlew build checkstyle connectedCheck -PdisablePreDex
-  - ./gradlew clean build connectedCheck -PdisablePreDex --scan #--stacktrack
+  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrack #--scan
   #- ./gradlew assembleAndroidTest
   #- ./gradlew connectedAndroidTest
 
-#after_success:
-#- bash <(curl -s https://codecov.io/bash)
+after_success:
+  - ./gradlew test jacocoTestReport coveralls
