--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,13 @@ buildscript {
     }
 }
 
+#here
+buildTypes { 
+       debug { 
+          testCoverageEnabled = true 
+       }
+ #here  
+       
 plugins {
     id 'jacoco'
     id 'com.github.kt3k.coveralls' version '2.6.3'
