--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ buildscript {
         google()
         jcenter()
         
+        maven {
+            url "https://plugins.gradle.org/m2/"
+              }
+        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
