--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+plugins {
+    id 'net.saliman.cobertura' version '2.3.1'
+    id 'com.github.kt3k.coveralls' version '2.10.0'
+}
+
+cobertura.coverageFormats = ['html', 'xml'] 
+
 buildscript {
     repositories {
         google()
         jcenter()
-        
-        maven {
-            url "https://plugins.gradle.org/m2/"
-              }
         
     }
     dependencies {
@@ -18,19 +21,6 @@ buildscript {
     }
 }
 
-
- 
- plugins {
-    id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.6.3'
-}
-apply plugin: 'com.vanniktech.android.junit.jacoco'
-jacocoTestReport {
-    reports {
-        xml.enabled = true // coveralls plugin depends on xml format report
-        html.enabled = true
-    }
-}
 
 
 apply plugin: 'com.gradle.build-scan'
@@ -50,10 +40,3 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
-buildTypes { 
-       debug { 
-          testCoverageEnabled = true 
-       }
-      }
-
