--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
+coveralls {
+    jacocoReportPath = "${buildDir}/reports/coverage/debug/report.xml"
+}
+
+tasks.coveralls {
+    dependsOn 'connectedAndroidTest'
+    onlyIf { System.env.'CI' }
+}
+
+apply plugin: 'com.github.kt3k.coveralls'
+
 apply plugin: 'com.google.gms.google-services'
