--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    
+     buildTypes {
+       debug {
+           testCoverageEnabled true
+       }
+   }
 }
 
 dependencies {
