--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ android:
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+    - extra-android-m2repository
 
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
