--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,30 @@ buildscript {
         google()
         jcenter()
         
+        maven {
+            url "https://plugins.gradle.org/m2/"
+              }
+        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-        
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+
+ 
+ plugins {
+    id 'jacoco'
+    id 'com.github.kt3k.coveralls' version '2.6.3'
+}
+apply plugin: 'com.vanniktech.android.junit.jacoco'
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
     }
 }
 
@@ -34,3 +50,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+buildTypes { 
+       debug { 
+          testCoverageEnabled = true 
+       }
+      }
