--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ jacocoTestReport {
     }
 }
 
-
-apply plugin: 'com.gradle.build-scan'
+apply plugin: "com.vanniktech.android.junit.jacoco"
+#apply plugin: 'com.gradle.build-scan'
 buildScan {
     licenseAgreementUrl = 'https://gradle.com/terms-of-service'
     licenseAgree = 'yes'
