--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ before_script:
 
 script:
   #- ./gradlew build checkstyle connectedCheck -PdisablePreDex
-  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrack #--scan
+  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
   #- ./gradlew assembleAndroidTest
   #- ./gradlew connectedAndroidTest
   
