--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,10 @@ jacocoTestReport {
     }
 }
 
+coveralls {
+    jacocoReportPath 'build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml'
+}
+
 gradlePlugin {
     plugins {
         coverallsPlugin {
