--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:3.6.1'
+
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,10 +31,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+        google()
         mavenCentral()
         
     }
 }
+
 
 jacocoTestReport {
     reports {
@@ -40,6 +44,8 @@ jacocoTestReport {
         xml.destination = file("build/foo.xml")
     }
 }
+
+
 
 coveralls {
     jacocoReportPath 'build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml'
