--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: android
 sudo: required
 Jdk: oraclejdk8
-sudo: false
 
 env:
   global:
@@ -26,12 +25,12 @@ android:
     - tools
     - android-28
     - android-22
-    - android-29
     - platform-tools
-    - build-tools-28.0.3
+    - build-tools-29.0.0
     - extra
     # To run emulator during your tests
     - sys-img-x86-android-28
+    - sys-img-x86-android-29
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
@@ -57,8 +56,8 @@ before_script:
   
 
 script:
-  #- ./gradlew build checkstyle connectedCheck -PdisablePreDex
-  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
+  - ./gradlew build checkstyle connectedCheck -PdisablePreDex
+  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace --debug #--scan
   - ./gradlew -Dscan=true build
   #- ./gradlew assembleAndroidTest
   #- ./gradlew connectedAndroidTest
