--- a/.travis.yml
+++ b/.travis.yml
@@ -26,15 +26,13 @@ android:
     - android-28
     - android-22
     - platform-tools
-    - build-tools-28.0.0
+    - build-tools-28.0.3
     - extra
     # To run emulator during your tests
     - sys-img-x86-android-28
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
-    - extra-android-support
-    - extra-android-m2repository
 
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
@@ -48,22 +46,20 @@ before_install:
 
 before_script:
   #- echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - yes | sdkmanager "platforms;android-28"
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 32M
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   #- adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - adb shell input keyevent 82 &
-  
+
 
 script:
-  - chmod +x ./gradlew
-  - ./gradlew build checkstyle connectedCheck -PdisablePreDex
-  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace
+  #- ./gradlew build checkstyle connectedCheck -PdisablePreDex
+  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
   - ./gradlew -Dscan=true build
   #- ./gradlew assembleAndroidTest
   #- ./gradlew connectedAndroidTest
-  
+
 after_success:
   #- ./gradlew test jacocoTestReport coveralls
   #- ./gradlew check jacocoTestReport coveralls
