--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.5.0'
 
         
         // NOTE: Do not place your application dependencies here; they belong
