--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,8 @@ script:
   - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
   - ./gradlew -Dscan=true build
   - ./gradlew connectedAndroidTest coveralls
+  - ./gradlew jacocoTestReport coveralls
+
   #- ./gradlew assembleAndroidTest
   #- ./gradlew connectedAndroidTest
 
