Another try to wear coverals

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     
     testOptions {
     	unitTests {
-    		includeAndroidResouces = true
+    		includeAndroidResources = true
     		returnDefaultValues = true
     	}
     }
