--- a/.travis.yml
+++ b/.travis.yml
@@ -54,11 +54,11 @@ before_script:
 
 
 script:
-  - ./gradlew build jacocoTestReport assembleAndroidTest
-  - echo no | android create avd --force -n test -t $ANDROID_API_LEVEL --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+#  - ./gradlew build jacocoTestReport assembleAndroidTest
+#  - echo no | android create avd --force -n test -t $ANDROID_API_LEVEL --abi $ANDROID_ABI
+#  - emulator -avd test -no-skin -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
 
   - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
   - ./gradlew -Dscan=true build
