--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,41 +16,45 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-           testCoverageEnabled true
-       }
+            testCoverageEnabled true
+        }
     }
     compileOptions {
         targetCompatibility = 1.8
         sourceCompatibility = 1.8
     }
     buildToolsVersion = '29.0.0'
-    
+
     testOptions {
-    	unitTests {
-    		includeAndroidResources = true
-    		returnDefaultValues = true
-    	}
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+        }
     }
 }
 
-	coveralls {
-		jacocoReportPath 'build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml'
-	}
-	
-	task jacocoTestReport(type: JacocoReport, dependsOn:['testDebugUnitTest', 'createDebugCoverageReport']){
-		reports {
-			xml.enabled = true
-			html.enabled = true
-		}	
-		
-	}
+coveralls {
+    jacocoReportPath 'build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml'
+}
+
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }	
+
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:support-v4:28.0.0'
+implementation 'com.android.support:design:28.0.0'
+implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+implementation 'android.arch.navigation:navigation-ui:1.0.0'
+implementation 'android.arch.lifecycle:extensions:1.1.1'
+testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
