--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,20 @@
 apply plugin: 'com.android.application'
 
+//apply plugin: "androidx.navigation.safeargs"
+//
+//apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-kapt'
+//
 android {
-    compileSdkVersion 28
-
+    compileSdkVersion = 29
+    //compileSdkVersion "Google Inc.:Glass Development Kit Sneak Peek:15"
+    buildToolsVersion = "29.0.0"
     defaultConfig {
         applicationId "com.example.gradshub"
+        //minSdkVersion 21
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -27,7 +35,7 @@ android {
         sourceCompatibility = 1.8
     }
 
-    buildToolsVersion = '29.0.0'
+    //buildToolsVersion = '29.0.0'
 
     testOptions {
         unitTests {
@@ -51,7 +59,10 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    //
+    //implementation "org.jetbrains.kotlin:kotlin-atdlib-jdk7:$kotlin_version"
+    //implementation 'androidx.core:core-ktx:1.1.0'
+    //
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -62,5 +73,28 @@ dependencies {
 
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
+
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    //Espresso
+    //def androidx_test_espresso = "3.1.0"
+    //androidTestImplementation "androidx.test.espressoo:espresso-core:$androidx_test_espresso"
+    //Androidx.test
+    //def androidx_test = "1.1.0"
+    //androidTestImplementation "androidx.test:runner:$androidx_test"
+    //androidtestImplementation "androidx.test:core:$androidx_test"
+    //androidTestImplementation "androidx.test.exit:junit-ktx:$androidx_test"
+
+
+    androidTestImplementation 'com.21buttons:fragment-test-rule:2.0.1'
+    debugImplementation 'com.21buttons:fragment-test-rule-extras:2.0.1'
+
+    //def fragment_version = "1.2.4"
+    //debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    
 
 }
