--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.5.0'
-
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha09"
-
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha05"
+//        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha09"
+  //      classpath "androidx.navigation:safe-args-gradle-plugin:1.0.0-alpha01"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
