--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,9 @@ android:
 
 before_install:
   - chmod +x gradlew
+  - yes | sdkmanager --licenses
   - yes | sdkmanager "build-tools;28.0.3"
+  - yes | sdkmanager "build-tools;29.0.0"
   - yes | sdkmanager "platforms;android-28"
 
 before_script:
