--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
 
         <activity android:name=".main.availablegroups.AvailableTestingActivity"></activity>
 
+        <activity android:name=".authentication.FragmentRegisterActivity"></activity>
+
 
     </application>
 
