--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
 
         <activity android:name=".main.availablegroups.GroupListActivity"></activity>
 
+        <activity android:name=".main.home.HomeTestActivity"></activity>
+
 
     </application>
 
