--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        //
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        //
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
