--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,9 @@ dependencies {
     // Firebase Storage
     implementation 'com.google.firebase:firebase-storage:19.1.1'
 
+    // Firebase Cloud Messaging and Analytics libraries
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+
+
 }
